@@ -9,24 +9,16 @@
  */
 package tut.view;
 
-import tut.model.LooseDyn;
-
-public class ObsPain extends Obs {
-  public ObsPain(String en, tut.ctrl.Parameters p) {
+public class ObsMarker extends Obs {
+  public ObsMarker(String en, tut.ctrl.Parameters p) {
     super(en,p);
-  }
-
-  @Override
-  public void init(java.io.File dir, tut.model.Model m) {
-    super.init(dir,m);
-    if (!(m instanceof LooseDyn)) throw new RuntimeException("Pain can only be measured from LooseDyn");
   }
   
   @Override
   public java.util.ArrayList<Double> measure() {
     java.util.ArrayList<Double> retVal = new java.util.ArrayList<>();
-    subject.comps.stream().forEach((c) -> {
-      retVal.add(((tut.model.LocaleDyn)c).pain);
+    subject.comps.stream().forEach((ld) -> {
+      retVal.add(ld.particles.get("Marker").val);
     });
     return retVal;
   }
